Incorrect bpy.data.screens[..] behavior #62199

Closed
opened 2019-03-05 02:47:15 +01:00 by Campbell Barton · 3 comments

Accessing bpy.data.screens has strange behavior:

  >>> bpy.data.screens.keys()
  ['Default', 'Default', 'Default', 'Default', 'Default', 'Default', 'Default', 'Default', 'Default', 'Default.001', 'Default.001', 'Default.001', 'Default.001', 'Default.001', 'Default']

Keys should never have duplicate entries:

Delete all workspaces (except one) and run this again:

  >>> bpy.data.screens.keys()
  ['', '', 'Default.001', '', '', '', '', 'Default', '', '', '', '', '', '', '', '']

Now access the names directly:

  >>> [s.name for s in bpy.data.screens]
  ['Animation', 'Compositing', 'Default', 'Layout', 'Modeling', 'Rendering', 'Scripting', 'Sculpting', 'Shading', 'Texture Paint', 'Default.006', 'Default.007', 'Default.008', 'Default.016', 'Default.020', 'UV Editing']

This is caused by Screen using layout_name as it's identifier for the struct which may not be available or unique.

Latest blender 1df6a98b176f8023a26c8cd5c9680ff0b37aa0d0

Accessing bpy.data.screens has strange behavior: ``` >>> bpy.data.screens.keys() ['Default', 'Default', 'Default', 'Default', 'Default', 'Default', 'Default', 'Default', 'Default', 'Default.001', 'Default.001', 'Default.001', 'Default.001', 'Default.001', 'Default'] ``` Keys should never have duplicate entries: Delete all workspaces (except one) and run this again: ``` >>> bpy.data.screens.keys() ['', '', 'Default.001', '', '', '', '', 'Default', '', '', '', '', '', '', '', ''] ``` Now access the names directly: ``` >>> [s.name for s in bpy.data.screens] ['Animation', 'Compositing', 'Default', 'Layout', 'Modeling', 'Rendering', 'Scripting', 'Sculpting', 'Shading', 'Texture Paint', 'Default.006', 'Default.007', 'Default.008', 'Default.016', 'Default.020', 'UV Editing'] ``` ---- This is caused by Screen using `layout_name` as it's identifier for the struct which may not be available or unique. Latest blender `1df6a98b176f8023a26c8cd5c9680ff0b37aa0d0`
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This issue was referenced by 51e743c7fa

This issue was referenced by 51e743c7fa0f0bddac45066bc162b5ca99586031
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62199
No description provided.